[package]
name = "transiter"
description = "An Iterator suitable for navigating recursive structures and DAGs"
version = "0.2.0"
license = "MIT"
authors = ["Julian Ganz <neither@nut.email>"]
edition = "2018"
keywords = ["iterator","recursion"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
